modify select llm script to read from merged dataset and subsample number of problems

--- a/select_llms.ipynb
+++ b/select_llms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "{'status': 'success'}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,21 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "pattern = re.compile(r'\\[asy\\].*?\\[/asy\\]', re.DOTALL)\n",
+    "\n",
     "def remove_asy_tags(text):\n",
     "    \"\"\"\n",
     "    Remove the [asy] tags from the solution.\n",
     "    They are Asymptote code that are used for plotting, which are not relevant here.\"\"\"\n",
-    "    pattern = re.compile(r'\\[asy\\].*?\\[/asy\\]', re.DOTALL)\n",
+    "    global pattern\n",
     "    return re.sub(pattern, '', text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +147,7 @@
     "        \"Now, I want you to determine whether the student's answer is correct for the following problem.  Please make sure to ONLY answer in `YES` or `NO` without any mistake: \\nQ: (1) Problem: ```\"\n",
     "        + prob\n",
     "        + \"``` (2) Solution: ```\"\n",
-    "        + remove_asy_tags(sol)\n",
+    "        + sol\n",
     "        + \"``` (3) Student's answer: ```\"\n",
     "        + ans\n",
     "        + \"```.\\nA: \"\n",
@@ -188,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The phase shift of a sine function in the form $y = A \\\\sin(B(x - C) + D)$ is given by $C$. In this problem, we have:\\n\\n$$y = 2 \\\\sin \\\\left( 2x + \\\\frac{\\\\pi}{3} \\\\right) = 2 \\\\sin \\\\left( 2\\\\left(x + \\\\frac{\\\\pi/6}{2}\\\\right)\\\\right).$$\\n\\nWe can see that the phase shift is $\\\\boxed{\\\\frac{\\\\pi/6}{2} = \\\\frac{\\\\pi}{12}}$.\\n\\nFinal Answer: The final answer is \\\\frac{\\\\pi}{12}. I hope it is correct.'"
+       "'To find the phase shift, we can rewrite the equation as follows:\\n\\n$$y=2\\\\sin\\\\left(\\\\left(2x+\\\\frac{\\\\pi}{3}\\\\right)-\\\\left(-\\\\frac{\\\\pi}{3}\\\\right)\\\\right)=2\\\\sin\\\\left(2(x-\\\\frac{\\\\pi}{6})\\\\right).$$\\n\\nThe phase shift is the value of $x$ that makes the argument of the sine function equal to zero. Therefore, we can set up an equation:\\n\\n$$2(x-\\\\frac{\\\\pi}{6})=0.$$Solving for $x$, we get:\\n\\n$$x=\\\\boxed{\\\\frac{\\\\pi}{6}}.$$\\n\\nThis is the phase shift.'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,37 +239,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing dataset algebra with levels [3, 4, 5]\n",
-      "Testing problem 2833.json\n",
-      "Problem numbers at each level attempted to solve so far: [0, 0, 0, 0, 0, 1]\n",
-      "Correctly-solved problem numbers at each level so far: [0, 0, 0, 0, 0, 1]\n"
+      "Testing dataset algebra with levels [1, 2, 3, 4, 5]\n",
+      "Testing problem 72 of algebra\n",
+      "Problem numbers at each level attempted to solve so far: [0, 0, 0, 0, 1]\n",
+      "Correctly-solved problem numbers at each level so far: [0, 0, 0, 0, 1]\n",
+      "Testing problem 2029 of algebra\n",
+      "Problem numbers at each level attempted to solve so far: [0, 0, 1, 0, 1]\n",
+      "Correctly-solved problem numbers at each level so far: [0, 0, 1, 0, 1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 0, 0, 0, 0, 1.0]"
+       "[0, 0, 1.0, 0, 1.0]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import random\n",
+    "\n",
     "def test(solver,\n",
     "         data_class:str,\n",
+    "         dataset:list,\n",
     "         solver_llm=None,\n",
     "         levels:list=[1,2,3,4,5],\n",
-    "         target_dir='/Users/tanmaydas/dev/dl/alphaMath/dataset/train',\n",
     "         judging_llm:str='gpt-3.5-turbo',\n",
+    "         sample_size=None,\n",
     "         test_mode=False,\n",
     "    ):\n",
     "    \"\"\"\n",
@@ -284,38 +292,37 @@
     "    assert data_class in ['algebra','counting_and_probability','geometry','intermediate_algebra','number_theory','prealgebra','precalculus'], \"Invalid data class\"\n",
     "    assert all([level in [1,2,3,4,5] for level in levels]), \"Levels must be in 1 to 5\"\n",
     "\n",
-    "    target_dir=os.path.join(target_dir,data_class)\n",
-    "    files = [f for f in os.listdir(target_dir) if os.path.isfile(os.path.join(target_dir, f))]\n",
-    "    # remove directories, only files\n",
     "    print(f'Testing dataset {data_class} with levels {str(sorted(set(levels)))}')\n",
     "\n",
-    "    prob_num=[0,0,0,0,0,0] # num of problems at each level\n",
-    "    correct_num=[0,0,0,0,0,0] # num of correctly-solved problems at each level\n",
+    "    prob_num=[0, 0, 0, 0, 0] # num of problems at each level\n",
+    "    correct_num=[0, 0, 0, 0, 0] # num of correctly-solved problems at each level\n",
     "\n",
+    "    # retry files that had errors in the first round\n",
     "    retry_files = []\n",
     "\n",
-    "    for i in range(len(files) if not test_mode else min(1,len(files))):\n",
-    "        if test_mode:\n",
-    "            print(f\"Testing problem {files[i]}\")\n",
-    "        with open(os.path.join(target_dir, files[i]), \"r\") as f:\n",
-    "            data = json.load(f)\n",
-    "            level=int(data[\"level\"][-1])\n",
-    "            if level not in levels:\n",
-    "                continue\n",
-    "            prob_num[level]+=1\n",
-    "            prob = data[\"problem\"]\n",
-    "            sol = data[\"solution\"]\n",
-    "            ans=solver(prob,data_class,solver_llm)\n",
-    "            # TODO: calling the solver. do some modification here if neccessary\n",
+    "    # Randomly choose unique elements\n",
+    "    selected_dataset = random.sample(dataset, sample_size)\n",
     "\n",
-    "            try:\n",
-    "                is_correct=judge_correctness(prob, sol, ans, llm=judging_llm)\n",
-    "                if is_correct:\n",
-    "                    correct_num[level]+=1\n",
-    "            except ValueError:\n",
-    "                print(f\"Error in judging correctness for problem {files[i]}. Will retry later.\")\n",
-    "                retry_files.append(files[i])\n",
-    "                prob_num[level]-=1\n",
+    "    for i in range(len(selected_dataset)):\n",
+    "        if test_mode:\n",
+    "            print(f\"Testing problem {selected_dataset[i]['filename']} of {data_class}\")\n",
+    "\n",
+    "        level = selected_dataset[i][\"level\"]\n",
+    "        if level not in levels:\n",
+    "            continue\n",
+    "        prob_num[level-1]+=1\n",
+    "        prob = selected_dataset[i][\"problem\"]\n",
+    "        sol = remove_asy_tags(selected_dataset[i][\"solution\"])\n",
+    "        ans=solver(prob,data_class,solver_llm)\n",
+    "\n",
+    "        try:\n",
+    "            is_correct=judge_correctness(prob, sol, ans, llm=judging_llm)\n",
+    "            if is_correct:\n",
+    "                correct_num[level-1]+=1\n",
+    "        except ValueError:\n",
+    "            print(f\"Error in judging correctness for problem {files[i]}. Will retry later.\")\n",
+    "            retry_files.append(i)\n",
+    "            prob_num[level-1]-=1\n",
     "\n",
     "        if test_mode:\n",
     "            print(f\"Problem numbers at each level attempted to solve so far: {prob_num}\")\n",
@@ -326,20 +333,19 @@
     "        print(f\"Retrying {len(retry_files)} files\")\n",
     "        for i in range(len(retry_files)):\n",
     "            if test_mode:\n",
-    "                print(f\"Again testing problem {files[i]}\")\n",
-    "            with open(os.path.join(target_dir, retry_files[i]), \"r\") as f:\n",
-    "                data = json.load(f)\n",
-    "                level=int(data[\"level\"][-1])\n",
-    "                prob = data[\"problem\"]\n",
-    "                sol = data[\"solution\"]\n",
-    "                ans=solver(prob,data_class,solver_llm)\n",
-    "                try:\n",
-    "                    is_correct=judge_correctness(prob, sol, ans, llm=judging_llm)\n",
-    "                    if is_correct:\n",
-    "                        correct_num[level]+=1\n",
-    "                except ValueError:\n",
-    "                    print(f\"Error in judging correctness for problem {retry_files[i]}\")\n",
-    "                    prob_num[level]-=1\n",
+    "                print(f\"Again testing problem {retry_files[i]} of {data_class}\")\n",
+    "\n",
+    "            level = selected_dataset[retry_files[i]][\"level\"]\n",
+    "            prob_num[level-1]+=1\n",
+    "            prob = selected_dataset[retry_files[i]][\"problem\"]\n",
+    "            sol = remove_asy_tags(selected_dataset[retry_files[i]][\"solution\"])\n",
+    "            try:\n",
+    "                is_correct=judge_correctness(prob, sol, ans, llm=judging_llm)\n",
+    "                if is_correct:\n",
+    "                    correct_num[level-1]+=1\n",
+    "            except ValueError:\n",
+    "                print(f\"Error in judging correctness for problem {retry_files[i]}\")\n",
+    "                prob_num[level-1]-=1\n",
     "\n",
     "        if test_mode:\n",
     "            print(f\"Problem numbers at each level attempted to solve so far: {prob_num}\")\n",
@@ -348,7 +354,17 @@
     "    return list(map(lambda x,y: x/y if y!=0 else 0, correct_num, prob_num))\n",
     "\n",
     "# test the function\n",
-    "test(solver=llm_solver,data_class='algebra',levels=[3,4,5],solver_llm=DEFAULT_JUDGE_LLM, judging_llm=DEFAULT_JUDGE_LLM, test_mode=True)"
+    "ALGEBRA_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/algebra/merged.json'\n",
+    "ALGEBRA_DATASET = json.load(open(ALGEBRA_DATASET_PATH))\n",
+    "test(solver=llm_solver,\n",
+    "     data_class='algebra',\n",
+    "     dataset=ALGEBRA_DATASET,\n",
+    "     levels=[1,2,3,4,5],\n",
+    "     solver_llm=DEFAULT_JUDGE_LLM,\n",
+    "     judging_llm=DEFAULT_JUDGE_LLM,\n",
+    "     sample_size=2,\n",
+    "     test_mode=True\n",
+    ")"
    ]
   },
   {
@@ -364,8 +380,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ALGEBRA_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/algebra/merged.json'\n",
+    "ALGEBRA_DATASET = json.load(open(ALGEBRA_DATASET_PATH))\n",
+    "\n",
     "for llm in LLMS:\n",
-    "    acc = test(solver=llm_solver,data_class='algebra',levels=[3,4,5],solver_llm=llm, judging_llm=DEFAULT_JUDGE_LLM)\n",
+    "    acc = test(solver=llm_solver,\n",
+    "                data_class='algebra',\n",
+    "                dataset=ALGEBRA_DATASET,\n",
+    "                levels=[1,2,3,4,5],\n",
+    "                solver_llm=llm,\n",
+    "                judging_llm=DEFAULT_JUDGE_LLM,\n",
+    "                sample_size=10\n",
+    "            )\n",
     "    # Weighted average of accuracy with most weightage to the highest level\n",
     "    mean_acc = sum([acc[i]*i for i in range(1,len(acc))])/sum(range(1,len(acc)))\n",
     "    print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")"
@@ -384,8 +410,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "PRECALCULUS_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/precalculus/merged.json'\n",
+    "PRECALCULUS_DATASET = json.load(open(PRECALCULUS_DATASET_PATH))\n",
+    "\n",
     "for llm in LLMS:\n",
-    "    acc = test(solver=llm_solver,data_class='precalculus',levels=[3,4,5],solver_llm=llm, judging_llm=DEFAULT_JUDGE_LLM)\n",
+    "    acc = test(solver=llm_solver,\n",
+    "                data_class='precalculus',\n",
+    "                dataset=PRECALCULUS_DATASET,\n",
+    "                levels=[1,2,3,4,5],\n",
+    "                solver_llm=llm,\n",
+    "                judging_llm=DEFAULT_JUDGE_LLM,\n",
+    "                sample_size=10\n",
+    "            )\n",
     "    # Weighted average of accuracy with most weightage to the highest level\n",
     "    mean_acc = sum([acc[i]*i for i in range(1,len(acc))])/sum(range(1,len(acc)))\n",
     "    print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")"
