read the root path using os module

--- a/select_llms.ipynb
+++ b/select_llms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "{'status': 'success'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_PATH = os.getcwd()\n",
+    "ROOT_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +120,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To find the phase shift, we can rewrite the equation as follows:\\n\\n$$y=2\\\\sin\\\\left(\\\\left(2x+\\\\frac{\\\\pi}{3}\\\\right)-\\\\left(-\\\\frac{\\\\pi}{3}\\\\right)\\\\right)=2\\\\sin\\\\left(2(x-\\\\frac{\\\\pi}{6})\\\\right).$$\\n\\nThe phase shift is the value of $x$ that makes the argument of the sine function equal to zero. Therefore, we can set up an equation:\\n\\n$$2(x-\\\\frac{\\\\pi}{6})=0.$$Solving for $x$, we get:\\n\\n$$x=\\\\boxed{\\\\frac{\\\\pi}{6}}.$$\\n\\nThis is the phase shift.'"
+       "\"To find the phase shift, we need to identify the constant term within the argument of the sine function. In this case, it's $\\\\frac{\\\\pi}{3}$.\\n\\nThe general form of a sinusoidal function is $y = A \\\\sin(B(x - C))$, where $A$ is the amplitude, $B$ is the frequency, and $C$ is the phase shift.\\n\\nComparing our given function with the general form, we can see that:\\n\\n* $A = 2$\\n* $B = 2$\\n* $C = \\\\frac{\\\\pi}{3}$\\n\\nThe phase shift, $C$, is the constant term within the argument of the sine function. Therefore, the phase shift of the graph of $y = 2 \\\\sin \\\\left( 2x + \\\\frac{\\\\pi}{3} \\\\right)$ is $\\\\boxed{\\\\frac{\\\\pi}{3}}$.\\n\\nHere's the solution in LaTeX format:\\n\\n```latex\\nThe phase shift, C, is the constant term within the argument of the sine function.\\nTherefore, the phase shift of the graph of $y = 2 \\\\sin \\\\left( 2x + \\\\frac{\\\\pi}{3} \\\\right)$ is $\\\\frac{\\\\pi}{3}$.\\n```\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -247,21 +257,21 @@
      "output_type": "stream",
      "text": [
       "Testing dataset algebra with levels [1, 2, 3, 4, 5]\n",
-      "Testing problem 72 of algebra\n",
-      "Problem numbers at each level attempted to solve so far: [0, 0, 0, 0, 1]\n",
-      "Correctly-solved problem numbers at each level so far: [0, 0, 0, 0, 1]\n",
-      "Testing problem 2029 of algebra\n",
-      "Problem numbers at each level attempted to solve so far: [0, 0, 1, 0, 1]\n",
-      "Correctly-solved problem numbers at each level so far: [0, 0, 1, 0, 1]\n"
+      "Testing problem 1469 of algebra\n",
+      "Problem numbers at each level attempted to solve so far: [0, 1, 0, 0, 0]\n",
+      "Correctly-solved problem numbers at each level so far: [0, 1, 0, 0, 0]\n",
+      "Testing problem 402 of algebra\n",
+      "Problem numbers at each level attempted to solve so far: [0, 2, 0, 0, 0]\n",
+      "Correctly-solved problem numbers at each level so far: [0, 2, 0, 0, 0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 0, 1.0, 0, 1.0]"
+       "[0, 1.0, 0, 0, 0]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +364,7 @@
     "    return list(map(lambda x,y: x/y if y!=0 else 0, correct_num, prob_num))\n",
     "\n",
     "# test the function\n",
-    "ALGEBRA_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/algebra/merged.json'\n",
+    "ALGEBRA_DATASET_PATH = os.path.join(ROOT_PATH, 'merged_dataset', 'train', 'algebra', 'merged.json')\n",
     "ALGEBRA_DATASET = json.load(open(ALGEBRA_DATASET_PATH))\n",
     "test(solver=llm_solver,\n",
     "     data_class='algebra',\n",
@@ -371,6 +381,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TESTING ENDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For Algebra"
    ]
   },
@@ -380,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ALGEBRA_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/algebra/merged.json'\n",
+    "ALGEBRA_DATASET_PATH = os.path.join(ROOT_PATH, 'merged_dataset', 'train', 'algebra', 'merged.json')\n",
     "ALGEBRA_DATASET = json.load(open(ALGEBRA_DATASET_PATH))\n",
     "\n",
     "for llm in LLMS:\n",
@@ -410,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRECALCULUS_DATASET_PATH = '/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train/precalculus/merged.json'\n",
+    "PRECALCULUS_DATASET_PATH = os.path.join(ROOT_PATH, 'merged_dataset', 'train', 'precalculus', 'merged.json')\n",
     "PRECALCULUS_DATASET = json.load(open(PRECALCULUS_DATASET_PATH))\n",
     "\n",
     "for llm in LLMS:\n",
