corrected the retry mechanism

--- a/select_llms.ipynb
+++ b/select_llms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "{'status': 'success'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/tanmaydas/dev/dl/alphaMath'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ROOT_PATH = os.getcwd()\n",
     "ROOT_PATH"
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +131,7 @@
        "True"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"To find the phase shift, we need to identify the constant term within the argument of the sine function. In this case, it's $\\\\frac{\\\\pi}{3}$.\\n\\nThe general form of a sinusoidal function is $y = A \\\\sin(B(x - C))$, where $A$ is the amplitude, $B$ is the frequency, and $C$ is the phase shift.\\n\\nComparing our given function with the general form, we can see that:\\n\\n* $A = 2$\\n* $B = 2$\\n* $C = \\\\frac{\\\\pi}{3}$\\n\\nThe phase shift, $C$, is the constant term within the argument of the sine function. Therefore, the phase shift of the graph of $y = 2 \\\\sin \\\\left( 2x + \\\\frac{\\\\pi}{3} \\\\right)$ is $\\\\boxed{\\\\frac{\\\\pi}{3}}$.\\n\\nHere's the solution in LaTeX format:\\n\\n```latex\\nThe phase shift, C, is the constant term within the argument of the sine function.\\nTherefore, the phase shift of the graph of $y = 2 \\\\sin \\\\left( 2x + \\\\frac{\\\\pi}{3} \\\\right)$ is $\\\\frac{\\\\pi}{3}$.\\n```\""
+       "\"To find the phase shift, we can rewrite the given equation in the form `y=A\\\\sin(B(x+C)+D)`.\\n\\nWe have: $$y=2\\\\sin\\\\left(2x+\\\\frac{\\\\pi}{3}\\\\right)$$\\n\\nComparing this to the general form `y=A\\\\sin(B(x+C)+D)`, we can see that:\\n\\n`A = 2`\\n`B = 2`\\n`C = -\\\\frac{\\\\pi}{6}` (This is the phase shift we're looking for!)\\n\\n`D = 0`\\n\\nSince `C=-\\\\frac{\\\\pi}{6}`, this means that the graph is shifted to the left by `\\\\frac{\\\\pi}{6}` units. Therefore, the phase shift of the graph is `\\\\boxed{\\\\frac{\\\\pi}{6}}`.\""
       ]
      },
-     "execution_count": 62,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -257,21 +268,21 @@
      "output_type": "stream",
      "text": [
       "Testing dataset algebra with levels [1, 2, 3, 4, 5]\n",
-      "Testing problem 1469 of algebra\n",
+      "Testing problem 2802 of algebra\n",
       "Problem numbers at each level attempted to solve so far: [0, 1, 0, 0, 0]\n",
-      "Correctly-solved problem numbers at each level so far: [0, 1, 0, 0, 0]\n",
-      "Testing problem 402 of algebra\n",
-      "Problem numbers at each level attempted to solve so far: [0, 2, 0, 0, 0]\n",
-      "Correctly-solved problem numbers at each level so far: [0, 2, 0, 0, 0]\n"
+      "Correctly-solved problem numbers at each level so far: [0, 0, 0, 0, 0]\n",
+      "Testing problem 719 of algebra\n",
+      "Problem numbers at each level attempted to solve so far: [0, 1, 0, 0, 1]\n",
+      "Correctly-solved problem numbers at each level so far: [0, 0, 0, 0, 1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 1.0, 0, 0, 0]"
+       "[0, 0.0, 0, 0, 1.0]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +341,7 @@
     "            if is_correct:\n",
     "                correct_num[level-1]+=1\n",
     "        except ValueError:\n",
-    "            print(f\"Error in judging correctness for problem {files[i]}. Will retry later.\")\n",
+    "            print(f\"Error in judging correctness for problem {selected_dataset[i]['filename']}. Will retry later.\")\n",
     "            retry_files.append(i)\n",
     "            prob_num[level-1]-=1\n",
     "\n",
@@ -338,23 +349,23 @@
     "            print(f\"Problem numbers at each level attempted to solve so far: {prob_num}\")\n",
     "            print(f\"Correctly-solved problem numbers at each level so far: {correct_num}\")\n",
     "\n",
-    "    # Retry the files that have errors\n",
+    "    # Retry the files that had errors\n",
     "    if len(retry_files)>0:\n",
     "        print(f\"Retrying {len(retry_files)} files\")\n",
-    "        for i in range(len(retry_files)):\n",
+    "        for i in retry_files:\n",
     "            if test_mode:\n",
-    "                print(f\"Again testing problem {retry_files[i]} of {data_class}\")\n",
+    "                print(f\"Again testing problem {selected_dataset[i]['filename']} of {data_class}\")\n",
     "\n",
-    "            level = selected_dataset[retry_files[i]][\"level\"]\n",
+    "            level = selected_dataset[i][\"level\"]\n",
     "            prob_num[level-1]+=1\n",
-    "            prob = selected_dataset[retry_files[i]][\"problem\"]\n",
-    "            sol = remove_asy_tags(selected_dataset[retry_files[i]][\"solution\"])\n",
+    "            prob = selected_dataset[i][\"problem\"]\n",
+    "            sol = remove_asy_tags(selected_dataset[i][\"solution\"])\n",
     "            try:\n",
     "                is_correct=judge_correctness(prob, sol, ans, llm=judging_llm)\n",
     "                if is_correct:\n",
     "                    correct_num[level-1]+=1\n",
     "            except ValueError:\n",
-    "                print(f\"Error in judging correctness for problem {retry_files[i]}\")\n",
+    "                print(f\"Error in judging correctness for problem {selected_dataset[i]['filename']}\")\n",
     "                prob_num[level-1]-=1\n",
     "\n",
     "        if test_mode:\n",
