--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,23 +20,24 @@
     "import json\n",
     "import os\n",
     "\n",
-    "def merge_json(source_dir,\n",
-    "               data_class,\n",
-    "               target_dir,\n",
-    "               levels:list=[1,2,3,4,5],\n",
-    "               test_mode=False):\n",
-    "    source_dir=os.path.join(source_dir,data_class)\n",
-    "    files = [f for f in os.listdir(source_dir) if os.path.isfile(os.path.join(source_dir, f))]\n",
+    "\n",
+    "def merge_json(\n",
+    "    source_dir, data_class, target_dir, levels: list = [1, 2, 3, 4, 5], test_mode=False\n",
+    "):\n",
+    "    source_dir = os.path.join(source_dir, data_class)\n",
+    "    files = [\n",
+    "        f for f in os.listdir(source_dir) if os.path.isfile(os.path.join(source_dir, f))\n",
+    "    ]\n",
     "    prob_dict = {}\n",
     "    merged_json = []\n",
     "\n",
-    "    for i in range(len(files) if not test_mode else min(2,len(files))):\n",
+    "    for i in range(len(files) if not test_mode else min(2, len(files))):\n",
     "        if test_mode:\n",
     "            print(f\"Processing file {i+1}/{len(files)}\")\n",
     "            print(f\"working on file path: {os.path.join(source_dir, files[i])}\")\n",
     "        with open(os.path.join(source_dir, files[i]), \"r\") as f:\n",
     "            data = json.load(f)\n",
-    "            level=int(data[\"level\"][-1])\n",
+    "            level = int(data[\"level\"][-1])\n",
     "            if level not in levels:\n",
     "                continue\n",
     "            prob = data[\"problem\"]\n",
@@ -52,11 +53,12 @@
     "    with open(os.path.join(target_dir, data_class, \"merged.json\"), \"w\") as f:\n",
     "        json.dump(merged_json, f, indent=4)\n",
     "\n",
+    "\n",
     "PATH = \"/Users/tanmaydas/dev/dl/alphaMath/dataset/train\"\n",
     "source_dir = PATH\n",
     "target_dir = f\"/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train\"\n",
     "data_class = \"algebra\"\n",
-    "merge_json(source_dir, data_class, target_dir, levels=[4,5], test_mode=True)"
+    "merge_json(source_dir, data_class, target_dir, levels=[4, 5], test_mode=True)"
    ]
   },
   {
@@ -69,13 +71,13 @@
     "source_dir = PATH\n",
     "target_dir = f\"/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train\"\n",
     "data_class = \"algebra\"\n",
-    "merge_json(source_dir, data_class, target_dir, levels=[1,2,3,4,5])\n",
+    "merge_json(source_dir, data_class, target_dir, levels=[1, 2, 3, 4, 5])\n",
     "\n",
     "PATH = \"/Users/tanmaydas/dev/dl/alphaMath/dataset/train\"\n",
     "source_dir = PATH\n",
     "target_dir = f\"/Users/tanmaydas/dev/dl/alphaMath/merged_dataset/train\"\n",
     "data_class = \"precalculus\"\n",
-    "merge_json(source_dir, data_class, target_dir, levels=[1,2,3,4,5])"
+    "merge_json(source_dir, data_class, target_dir, levels=[1, 2, 3, 4, 5])"
    ]
   },
   {
