rename validate_solver_llm file to validate_llms

--- a/select_coder_llms.ipynb
+++ b/select_coder_llms.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "from constants import DEFAULT_JUDGE_LLM, CODE_LLMS\n",
     "from solver import llm_coder\n",
-    "from validate_solver_llm import validate_solver_llm"
+    "from validate_llms import validate_solver_llm"
    ]
   },
   {
