--- a/select_solver_llms.ipynb
+++ b/select_solver_llms.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "from constants import DEFAULT_JUDGE_LLM, LLMS\n",
     "from solver import llm_solver\n",
-    "from validate_solver_llm import validate_solver_llm"
+    "from validate_llms import validate_solver_llm"
    ]
   },
   {
