--- a/select_coder_llms.ipynb
+++ b/select_coder_llms.ipynb
@@ -15,7 +15,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'success'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import ollama\n",
     "\n",
@@ -25,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\abc\\\\Dropbox (GaTech)\\\\alphaMath'"
+       "'/Users/tanmaydas/dev/dl/alphaMath'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,9 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tanmaydas/dev/dl/alphaMath/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from constants import DEFAULT_JUDGE_LLM, CODE_LLMS\n",
     "from solver import solve_problem_by_coding\n",
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +111,7 @@
     "        dataset=SUBSAMPLED_ALGEBRA_DATASET,\n",
     "        solver_llm=llm,\n",
     "        levels=[1, 2, 3, 4, 5],\n",
-    "        judging_llm=\"gpt-3.5-turbo\",\n",
+    "        judging_llm=DEFAULT_JUDGE_LLM,\n",
     "        test_mode=True\n",
     "    )\n",
     "    # Weighted average of accuracy with most weightage to the highest level\n",
@@ -110,28 +130,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PRECALCULUS_DATASET_PATH = os.path.join(\n",
-    "#     ROOT_PATH, \"merged_dataset\", \"train\", \"precalculus\", \"merged.json\"\n",
-    "# )\n",
-    "# PRECALCULUS_DATASET = json.load(open(PRECALCULUS_DATASET_PATH))\n",
-    "# SUBSAMPLED_PRECALCULUS_DATASET = subsample(PRECALCULUS_DATASET, 30)\n",
+    "PRECALCULUS_DATASET_PATH = os.path.join(\n",
+    "    ROOT_PATH, \"merged_dataset\", \"train\", \"precalculus\", \"merged.json\"\n",
+    ")\n",
+    "PRECALCULUS_DATASET = json.load(open(PRECALCULUS_DATASET_PATH))\n",
+    "SUBSAMPLED_PRECALCULUS_DATASET = subsample(PRECALCULUS_DATASET, 5)\n",
     "\n",
-    "# for llm in CODE_LLMS:\n",
-    "#     acc = validate_solver_llm(\n",
-    "#         solver=llm_coder,\n",
-    "#         data_class=\"precalculus\",\n",
-    "#         dataset=SUBSAMPLED_PRECALCULUS_DATASET,\n",
-    "#         levels=[1, 2, 3, 4, 5],\n",
-    "#         solver_llm=llm,\n",
-    "#         judging_llm=DEFAULT_JUDGE_LLM,\n",
-    "#     )\n",
-    "#     # Weighted average of accuracy with most weightage to the highest level\n",
-    "#     mean_acc = sum([acc[i] * i for i in range(1, len(acc))]) / sum(range(1, len(acc)))\n",
-    "#     print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")"
+    "for llm in CODE_LLMS:\n",
+    "    acc, fail = validate_solver_llm(\n",
+    "        solve_method=solve_problem_by_coding,\n",
+    "        data_class=\"precalculus\",\n",
+    "        dataset=SUBSAMPLED_PRECALCULUS_DATASET,\n",
+    "        solver_llm=llm,\n",
+    "        levels=[1, 2, 3, 4, 5],\n",
+    "        judging_llm=DEFAULT_JUDGE_LLM,\n",
+    "        test_mode=True\n",
+    "    )\n",
+    "    # Weighted average of accuracy with most weightage to the highest level\n",
+    "    mean_acc = sum([acc[i] * i for i in range(1, len(acc))]) / sum(range(1, len(acc)))\n",
+    "    print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")\n",
+    "    mean_fail = sum([fail[i] * i for i in range(1, len(fail))]) / sum(range(1, len(fail)))\n",
+    "    print(f\"Weighted Mean Fail Rate for {llm}: {mean_fail}\")"
    ]
   },
   {
@@ -158,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
