formatted with black

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -18,9 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asy_pattern = re.compile(r'\\[asy\\].*?\\[/asy\\]', re.DOTALL)\n",
+    "asy_pattern = re.compile(r\"\\[asy\\].*?\\[/asy\\]\", re.DOTALL)\n",
+    "\n",
+    "\n",
     "def remove_asy_tags(text):\n",
-    "    return re.sub(asy_pattern, '', text)"
+    "    return re.sub(asy_pattern, \"\", text)"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "            print(f\"Processing file {i+1}/{len(files)}\")\n",
     "            print(f\"working on file path: {os.path.join(source_dir, files[i])}\")\n",
     "        with open(os.path.join(source_dir, files[i]), \"r\") as f:\n",
-    "            try: # error would occur in reading some files in the geometry class\n",
+    "            try:  # error would occur in reading some files in the geometry class\n",
     "                data = json.load(f)\n",
     "                level = int(data[\"level\"][-1])\n",
     "                if level not in levels:\n",
@@ -59,7 +61,7 @@
     "                continue\n",
     "\n",
     "            merged_json.append(prob_dict.copy())\n",
-    "            \n",
+    "\n",
     "    os.makedirs(os.path.join(target_dir, data_class), exist_ok=True)\n",
     "    with open(os.path.join(target_dir, data_class, \"merged.json\"), \"w\") as f:\n",
     "        json.dump(merged_json, f, indent=4)"
@@ -86,11 +88,13 @@
    ],
    "source": [
     "source_dir = \"D:/Users/abc/Desktop/MATH/test\"\n",
-    "target_dir = 'C:/Users/abc/Dropbox (GaTech)/python_projects/alphaMath/merged_dataset/test'\n",
+    "target_dir = (\n",
+    "    \"C:/Users/abc/Dropbox (GaTech)/python_projects/alphaMath/merged_dataset/test\"\n",
+    ")\n",
     "\n",
     "for data_class in ALL_PROBLEM_CLASSES:\n",
-    "    print('merging class:', data_class)\n",
-    "    merge_json(source_dir, data_class, target_dir, levels=[1,2,3,4,5])"
+    "    print(\"merging class:\", data_class)\n",
+    "    merge_json(source_dir, data_class, target_dir, levels=[1, 2, 3, 4, 5])"
    ]
   }
  ],
