--- a/select_coder_llms.ipynb
+++ b/select_coder_llms.ipynb
@@ -113,12 +113,14 @@
     "        solver_llm=llm,\n",
     "        levels=[1, 2, 3, 4, 5],\n",
     "        judging_llm=DEFAULT_JUDGE_LLM,\n",
-    "        test_mode=True\n",
+    "        test_mode=True,\n",
     "    )\n",
     "    # Weighted average of accuracy with most weightage to the highest level\n",
     "    mean_acc = sum([acc[i] * i for i in range(1, len(acc))]) / sum(range(1, len(acc)))\n",
     "    print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")\n",
-    "    mean_fail = sum([fail[i] * i for i in range(1, len(fail))]) / sum(range(1, len(fail)))\n",
+    "    mean_fail = sum([fail[i] * i for i in range(1, len(fail))]) / sum(\n",
+    "        range(1, len(fail))\n",
+    "    )\n",
     "    print(f\"Weighted Mean Fail Rate for {llm}: {mean_fail}\")"
    ]
   },
@@ -149,12 +151,14 @@
     "        solver_llm=llm,\n",
     "        levels=[1, 2, 3, 4, 5],\n",
     "        judging_llm=DEFAULT_JUDGE_LLM,\n",
-    "        test_mode=True\n",
+    "        test_mode=True,\n",
     "    )\n",
     "    # Weighted average of accuracy with most weightage to the highest level\n",
     "    mean_acc = sum([acc[i] * i for i in range(1, len(acc))]) / sum(range(1, len(acc)))\n",
     "    print(f\"Weighted Mean Accuracy for {llm}: {mean_acc}\")\n",
-    "    mean_fail = sum([fail[i] * i for i in range(1, len(fail))]) / sum(range(1, len(fail)))\n",
+    "    mean_fail = sum([fail[i] * i for i in range(1, len(fail))]) / sum(\n",
+    "        range(1, len(fail))\n",
+    "    )\n",
     "    print(f\"Weighted Mean Fail Rate for {llm}: {mean_fail}\")"
    ]
   },
