notebook for final evaluation

--- a/final_evaluation.ipynb
+++ b/final_evaluation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,8 @@
       "Level 2: 1 problem(s) sampled\n",
       "Level 3: 0 problem(s) sampled\n",
       "Level 4: 0 problem(s) sampled\n",
-      "Level 5: 0 problem(s) sampled\n"
+      "Level 5: 0 problem(s) sampled\n",
+      "[1.0, 1.0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -67,7 +68,7 @@
     "        judging_llm=\"llama3-70b-8192\",\n",
     "        levels=[1, 2, 3, 4, 5],\n",
     "        use_rag=True,\n",
-    "        logging_level=logging.DEBUG,\n",
+    "        logging_level=logging.ERROR,\n",
     "    )\n",
     ")"
    ]
