replace num_problem to dataset argument in test_accuracy

--- a/final_evaluation.ipynb
+++ b/final_evaluation.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "import json\n",
     "from testing_our_method import test_accuracy"
    ]
   },
@@ -59,10 +60,17 @@
    ],
    "source": [
     "# Test\n",
+    "from testing_our_method import subsample\n",
+    "problem_class = \"algebra\"\n",
+    "dataset_path = os.path.join(\n",
+    "    os.getcwd(), \"merged_dataset\", \"test\", problem_class, \"final.json\"\n",
+    ")\n",
+    "dataset = json.load(open(dataset_path))\n",
+    "dataset = subsample(dataset, 2)\n",
     "print(\n",
     "    test_accuracy(\n",
-    "        data_class=\"algebra\",\n",
-    "        num_problems=2,\n",
+    "        data_class=problem_class,\n",
+    "        dataset=dataset,\n",
     "        coding_llm=\"codegemma\",\n",
     "        main_solver_llm=\"llama3-70b-8192\",\n",
     "        judging_llm=\"llama3-70b-8192\",\n",
@@ -80,9 +88,13 @@
    "outputs": [],
    "source": [
     "for problem_class in ALL_PROBLEM_CLASSES:\n",
+    "    dataset_path = os.path.join(\n",
+    "        os.getcwd(), \"merged_dataset\", \"test\", problem_class, \"final.json\"\n",
+    "    )\n",
+    "    dataset = json.load(open(dataset_path))\n",
     "    acc = test_accuracy(\n",
     "        data_class=problem_class,\n",
-    "        num_problems=100,\n",
+    "        dataset=dataset,\n",
     "        coding_llm=\"llama3-70b-8192\",\n",
     "        main_solver_llm=\"llama3-70b-8192\",\n",
     "        judging_llm=\"llama3-70b-8192\",\n",
